# nebius-ai-examples

./: .env.template  .gitignore  LICENSE  README.md  env_setup.py  pyproject.toml  requirements.txt
finetuning/: README.md  pyproject.toml  qwen-peft-with-mlflow.ipynb  qwen.py
jupyterlab/: intro.ipynb
mlflow-examples/: mlflow-agent-ai-research.ipynb  mlflow-demo.ipynb  mlflow-quickstart.ipynb
