[project]
name = "nebius-ai-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.6"
dependencies = [
    "mlflow==2.21.2",
    "openai>=1.82.0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.11",
]
finetuning = [
    "transformers",
    "peft",
    "accelerate",
    "trl",
    "bitsandbytes",
    "datasets",
]

[tool.uv.workspace]
members = ["fine-tune-llm"]
