[project]
name = "nebius-ai-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.6"
dependencies = [
    "mlflow==2.21.2",
    "openai>=1.82.0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.11",
]
finetuning = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "peft>=0.15.2",
    "transformers>=4.52.3",
    "trl>=0.18.0",
]

[tool.uv.workspace]
members = ["fine-tune-llm"]
