[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "peft>=0.15.2",
    "torch>=2.7.0",
    "transformers>=4.52.4",
    "trl>=0.18.1",
]
